<?xml version="1.0"?>
<package format="2">
  <name>vision_tf_utils</name>
  <version>0.0.1</version>
  <description>Utilities around the relationship between vision and TF links.</description>
  <maintainer email="chris@cthierauf.com">cst (chris thierauf)</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
